--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+:root {
+  --rosa: #E74FC5;
+  --preto: #000000;
+  --branco: #ffffff;
+}
+
 *{
    padding: 0;
    margin:  0;
@@ -30,15 +36,19 @@ li{
 
 a {
   text-decoration: none;
-  color: black;
+  color: var(--preto);
 }
 .botao-securdario {
- border: 2px solid black ; 
+ border: 2px solid var(--preto) ; 
  border-radius: 5px;
 }
 
 img{
   width: 350px;
+}
+
+.manubar ul a li{
+  color: var(--rosa);
 }
 
 .corpo{
@@ -59,13 +69,13 @@ p {
 h1{
    font-size: 40px ;
    font-weight: 500;
-   color:  rgb(236, 95, 208);
+   color:  var(--rosa);
 }
 
 .botao-primario{
 
-   background-color: rgb(219, 17, 179);
-   color: rgb(245, 238, 238);
+   background-color: var(--rosa);
+   color: var(--branco)
    font-size: 28px ;
    border-radius: 9px ;
    text-align: center;
@@ -81,4 +91,172 @@ p,h1{
 
 .img_principal{
   width: 200px;
+}
+
+
+#produtos {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
+
+.produtos {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding-top: 50px;
+}
+
+.produtos .botao-primario {
+  text-align: center;
+}
+
+.produto {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 34px;
+  height: auto;
+}
+
+.produto a {
+  width: 200px;
+}
+
+.produto img {
+  height: auto; 
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 50px;
+  text-align: center;
+}
+
+h3 {
+  font-weight: normal;
+  font-size: 26px;
+}
+
+
+#beneficios {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+}
+
+.beneficios {
+  padding: 0 100px;
+  display: flex;
+  gap: 140px;
+  justify-content: center;
+  align-items: center;
+}
+
+.beneficio-titulo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 8px;
+  width: 100%;
+}
+
+.beneficio {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.beneficio h4 {
+  font-size: 20px;
+}
+
+.beneficio p {
+  text-align: center;
+  font-size: 16px;
+}
+
+#beneficios .botao-primario {
+  padding: 10px 50px;
+}
+
+#sobre-nos {
+  padding: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+#sobre-nos .esquerda {
+  height: 600px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sobre-nos .esquerda img {
+  width: 600px;
+}
+
+#sobre-nos .direita {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 45%;
+  gap: 36px;
+  padding: 0 250px;
+}
+
+footer {
+  background-color: var(--roxo-medio);
+  color: var(--branco);
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+footer img {
+  width: 50px;
+}
+
+footer p {
+  font-size: 16px;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 12px;
+}
+
+footer h5 {
+  font-size: 16px;
+  padding-bottom: 16px;
+}
+
+footer li {
+  font-size: 14px;
+  font-weight: normal;
+  padding: 0;
+  transition: opacity 0.6s ease;
+  cursor: pointer;
+}
+
+footer li:hover {
+  opacity: 60%;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-around;
+  font-size: 22px;
 }
