--- a/style.css
+++ b/style.css
@@ -27,12 +27,14 @@ body {
 ul{
   display: flex;
   justify-content: center;
+  color: var(--branco)
 }
 
 li{
   list-style-type: none;
   padding-left: 10px;
   padding-right: 10px;
+  color: var(--rosa)
 }
 
 a {
@@ -135,6 +137,7 @@ h2 {
   font-weight: bold;
   font-size: 50px;
   text-align: center;
+  color: var(--rosa)
 }
 
 h3 {
